--- a/dashboard.html
+++ b/dashboard.html
@@ -322,9 +322,6 @@
                     <button class="profile-tab active" data-tab="info">
                         <i class="fas fa-user"></i> Informações
                     </button>
-                    <button class="profile-tab" data-tab="preferences">
-                        <i class="fas fa-cog"></i> Preferências
-                    </button>
                     <button class="profile-tab" data-tab="achievements">
                         <i class="fas fa-trophy"></i> Conquistas
                     </button>
@@ -342,42 +339,12 @@
                             <label><i class="fas fa-envelope"></i> E-mail</label>
                             <input type="email" id="editEmail" class="profile-input" placeholder="seu@email.com">
                         </div>
-                        <div class="form-group">
-                            <label><i class="fas fa-briefcase"></i> Profissão</label>
-                            <input type="text" id="editProfession" class="profile-input" placeholder="Sua profissão">
-                        </div>
-                        <div class="form-group">
-                            <label><i class="fas fa-quote-left"></i> Bio</label>
-                            <textarea id="editBio" class="profile-textarea" placeholder="Conte um pouco sobre você..." rows="3"></textarea>
-                        </div>
                         <button class="btn-save-profile">
                             <i class="fas fa-save"></i> Salvar Alterações
                         </button>
                     </div>
 
                     <!-- Preferences Tab -->
-                    <div class="tab-pane" id="preferencesTab">
-                        <div class="preference-group">
-                            <h4><i class="fas fa-bell"></i> Notificações</h4>
-                            <div class="toggle-group">
-                                <label class="toggle-label">
-                                    <input type="checkbox" class="toggle-input" id="soundNotifications" checked>
-                                    <span class="toggle-slider"></span>
-                                    Sons de notificação
-                                </label>
-                                <label class="toggle-label">
-                                    <input type="checkbox" class="toggle-input" id="desktopNotifications" checked>
-                                    <span class="toggle-slider"></span>
-                                    Notificações na área de trabalho
-                                </label>
-                                <label class="toggle-label">
-                                    <input type="checkbox" class="toggle-input" id="dailyReminders">
-                                    <span class="toggle-slider"></span>
-                                    Lembretes diários
-                                </label>
-                            </div>
-                        </div>
-                    </div>
 
                     <!-- Achievements Tab -->
                     <div class="tab-pane" id="achievementsTab">
@@ -495,19 +462,11 @@
                             A forma mais inteligente e elegante de organizar sua vida. 
                             Transforme sua produtividade com design moderno e funcionalidades avançadas.
                         </p>
-                        <div class="social-links">
-                            <a href="#" class="social-link" data-tooltip="GitHub">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="social-link" data-tooltip="LinkedIn">
-                                <i class="fab fa-linkedin"></i>
-                            </a>
-                            <a href="#" class="social-link" data-tooltip="Twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="#" class="social-link" data-tooltip="Instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
+                        <!-- Redes sociais removidas conforme solicitação -->
+                        <div class="footer-mini-tags" aria-label="Qualidades do app">
+                            <span class="mini-tag"><i class="fas fa-bolt"></i><span>Produtivo</span></span>
+                            <span class="mini-tag"><i class="fas fa-layer-group"></i><span>Organizado</span></span>
+                            <span class="mini-tag"><i class="fas fa-feather-alt"></i><span>Leve</span></span>
                         </div>
                     </div>
 
